# analysis_trm

./: .gitignore  README.md  measure_rho.py  pretrain.py  pyproject.toml  run.sh
config/: cfg_pretrain.yaml
dataset/: build_sigma_k_dataset.py
scripts/: queue_run.sh  sigma_enqueue.sh
tests/: test_phase_tracker.py  test_pull_wandb_tau.py  test_research_mcp.py
tools/: experimentctl.py
utils/: z_logging.py
