[project]
name = "tinyrecursivemodels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "adam-atan2-pytorch",
  "wandb>=0.23.0",
  "tqdm>=4.67.1",
  "einops>=0.8.1",
  "coolname>=2.2.0",
  "pydantic>=2.12.4",
  "argdantic>=1.3.3",
  "omegaconf>=2.3.0",
  "hydra-core>=1.3.2",
  "huggingface-hub>=1.1.4",
  "packaging>=25.0",
  "ninja>=1.13.0",
  "wheel>=0.45.1",
  "setuptools>=80.9.0",
  "setuptools-scm>=9.2.2",
  "pydantic-core>=2.41.5",
  "numba>=0.62.1",
  "triton>=3.5.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
build-arc1 = "tinyrecursivemodels.main:build_arc1"
build-arc2 = "tinyrecursivemodels.main:build_arc2"
build-sudoku = "tinyrecursivemodels.main:build_sudoku"
build-maze = "tinyrecursivemodels.main:build_maze"
pretrain-arc1 = "tinyrecursivemodels.main:pretrain_arc1"
pretrain-arc2 = "tinyrecursivemodels.main:pretrain_arc2"
pretrain-sudoku-mlp-t = "tinyrecursivemodels.main:pretrain_sudoku_mlp_t"
pretrain-sudoku-att = "tinyrecursivemodels.main:pretrain_sudoku_att"
pretrain-maze = "tinyrecursivemodels.main:pretrain_maze"


[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
